productcontroller changes
