# server/api/controllers/products/router.ts
@@ -1,0 +1,4 @@
+import * as express from 'express'
+import Controller from './Controller'
+export default express.Router().get('',Controller.getProducts);
+
